--- a/index.html
+++ b/index.html
@@ -46,12 +46,18 @@
         </div>
         <div class="episodes">
           <h2 class="episodes__title">Предыдущие эпизоды</h2>
-          <div class="slider">
+          <div class="slider owl-carousel">
             <div class="slider__item">
               <img src="img/Rectangle1.png" alt="" class="slider__image">
               <div class="slider__year">1977</div>
               <h3 class="slider__title">Эпизод IV: <br> Новая надежда</h3>
               <div class="slider__rating"><span class="slider__rating-label">Рейтинг</span>
+                <span class="slider__rating-stars"></span>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star star-o"></i>
               </div>
             </div>
             <div class="slider__item">
@@ -59,6 +65,12 @@
               <div class="slider__year">1980</div>
               <h3 class="slider__title">Эпизод V: <br> Империя наносит ответный удар</h3>
               <div class="slider__rating"><span class="slider__rating-label">Рейтинг</span>
+                <span class="slider__rating-stars"></span>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star star-o"></i>
               </div>
             </div>
             <div class="slider__item">
@@ -66,6 +78,12 @@
               <div class="slider__year">1983</div>
               <h3 class="slider__title">Эпизод VI: <br> Возвращение джедая</h3>
               <div class="slider__rating"><span class="slider__rating-label">Рейтинг</span>
+                <span class="slider__rating-stars"></span>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star star-o"></i>
               </div>
             </div>
             <div class="slider__item">
@@ -73,6 +91,12 @@
               <div class="slider__year">1999</div>
               <h3 class="slider__title">Эпизод I: <br> Скрытая угроза</h3>
               <div class="slider__rating"><span class="slider__rating-label">Рейтинг</span>
+                <span class="slider__rating-stars"></span>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star star-o"></i>
               </div>
             </div>
             <div class="slider__item">
@@ -80,6 +104,12 @@
               <div class="slider__year">1999</div>
               <h3 class="slider__title">Эпизод I: <br> Скрытая угроза</h3>
               <div class="slider__rating"><span class="slider__rating-label">Рейтинг</span>
+                <span class="slider__rating-stars"></span>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star star-o"></i>
               </div>
             </div>
             <div class="slider__item">
@@ -87,6 +117,12 @@
               <div class="slider__year">1999</div>
               <h3 class="slider__title">Эпизод I: <br> Скрытая угроза</h3>
               <div class="slider__rating"><span class="slider__rating-label">Рейтинг</span>
+                <span class="slider__rating-stars"></span>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star star-o"></i>
               </div>
             </div>
             <div class="slider__item">
@@ -94,6 +130,12 @@
               <div class="slider__year">1999</div>
               <h3 class="slider__title">Эпизод I: <br> Скрытая угроза</h3>
               <div class="slider__rating"><span class="slider__rating-label">Рейтинг</span>
+                <span class="slider__rating-stars"></span>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star star-o"></i>
               </div>
             </div>
             <div class="slider__item">
@@ -101,6 +143,12 @@
               <div class="slider__year">1999</div>
               <h3 class="slider__title">Эпизод I: <br> Скрытая угроза</h3>
               <div class="slider__rating"><span class="slider__rating-label">Рейтинг</span>
+                <span class="slider__rating-stars"></span>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star"></i>
+                <i class="star star-o"></i>
               </div>
             </div>
           </div>
@@ -111,5 +159,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
